edited iphone part

--- a/12ProMax.html
+++ b/12ProMax.html
@@ -32,10 +32,10 @@
 						<div class="ichoose__memory">
 							<p>Memory</p>
 							<ul>
-								<li>64 gb</li>
-								<li>128 gb</li>
-								<li>256 gb</li>
-								<li>512 gb</li>
+								<li id="sixFour" onclick="price64()">64 gb</li>
+								<li id="oneTwoEight" onclick="price128()">128 gb</li>
+								<li id="twoFiveSix" onclick="price256()">256 gb</li>
+								<li id="fiveOneTwo" onclick="price512()">512 gb</li>
 							</ul>
 						</div>
 						<div class="ichoose__price">
@@ -46,9 +46,62 @@
 						</div>
 					</div>				 
 				</div>
-			 </div>
+			 </div>		
 		 </div>
-	 </div>
+		</section>
+		<section class="iphone-desc">
+			<div class="iphone-container">
+				<div class="iphone-desc__inner">
+					<div class="iphone-desc__header">
+						<p>Description</p>
+						<p>Characteristics</p>
+					</div>
+					<div class="iphone-desc__text">
+						<div class="desc-bold">
+							<p class="bold">Color</p>
+							<p>Gold , Graphite , Silver , Pacific Blue</p>
+						</div>
+						<hr>
+						<div class="desc-bold">
+							<p class="bold">Memory</p>
+							<p>64gb, 128 gb , 256 gb , 512 gb</p>
+						</div>
+						<hr>
+						<div class="desc-bold">
+							<p class="bold">Display</p>
+							<p>Diagonal 6,7 inch, Super Retina XDR</p>
+						</div>
+						<hr>
+						<div class="desc-bold">
+							<p class="bold">Network support</p>						 
+							<p>5G (sub-6 GHz), Gigabit LTE, Wi‑Fi 6 (802.11ax), Bluetooth 5.0, VoLTE, NFC</p>
+						</div>
+						<hr>
+						<div class="desc-bold">
+							<p class="bold">Camera</p>
+							<ul>
+								<li>Telephoto, Wide angle, Ultra - wide angle</li>
+								<li>Shooting HDR video in Dolby Vision standard up to 4K at 60 frames per second</li>
+								<li>Optical zoom range 5x</li>
+								<li>LiDAR scanner for portraits in Night mode, accelerated autofocus in low light and augmented reality of a new level</li>
+							</ul>
+						</div>
+						<hr>
+							<div class="desc-bold">
+								<p class="bold">Computing resources</p>
+								<ul>
+									<li>A14 Bionic Chip</li>
+									<li>6-core processor with 2 performance cores and 4 efficiency cores</li>
+									<li>4-core graphics processor</li>
+									<li>16-core Neural Engine System</li>
+									<li>RAM 4 GB</li>
+								</ul>
+							</div>
+							<hr>
+					</div>
+				</div>
+			</div>
+		</section>
  
 	<script src="https://kit.fontawesome.com/871559a4b3.js" crossorigin="anonymous"></script>
 	<script src="script.js"></script>
