--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">     
+    <link rel="stylesheet" href="style.css">
+	 <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 	 <link rel="stylesheet" href="iphoneSection.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -17,7 +18,7 @@
     <!-- End Section 1 (Showcase) -->
 
     <!-- Section 2 (iPhone) -->
-		<section class="iphone">
+		<section class="iphone" id="iphone">
 			<div class="iphone-container">
 				<div class="iphone-header">
 					<h1>Choose your Phone</h1>
@@ -153,7 +154,7 @@
         </div>
 
         <!-- The Modal -->
-<div id="myModal" class="modal">
+ <div id="myModal" class="modal">
 
     <!-- Modal content -->
     <div class="modal-content">      
@@ -216,7 +217,7 @@
     </div>
   
   </div>
-</div>
+ </div>
     <!-- Opening windows -->
 
   
@@ -225,9 +226,9 @@
 
     <!-- Section 4 (Apple watch) -->
        
-<!-- header section starts  -->
+ <!-- header section starts  -->
 
-<header class="header">
+ <header class="header">
 
   <a href="#" class="logo">
       <img src="images/logo-img.jpeg" alt="">
@@ -288,13 +289,13 @@
       <a href="#" class="btn">Buy now</a>
   </div>
 
-</header>
+ </header>
 
-<!-- header section ends -->
+ <!-- header section ends -->
 
-<!-- home section starts  -->
+ <!-- home section starts  -->
 
-<section class="home">
+ <section class="home">
 
   <!-- <div class="content">
       <h3>Heavy on features.
@@ -304,13 +305,13 @@
       <a href="#" class="btn">get yours now</a>
   </div> -->
 
-</section>
+ </section>
 
-<!-- home section ends -->
+ <!-- home section ends -->
 
-<!-- about section starts  -->
+ <!-- about section starts  -->
 
-<section class="about" id="applewatch">
+ <section class="about" id="applewatch">
 
   <h1 class="heading"> <span>Why apple watch?</span></h1>
   <div class="row">
@@ -329,13 +330,13 @@
 
   </div>
 
-</section>
+ </section>
 
-<!-- about section ends -->
+ <!-- about section ends -->
 
-<!-- menu section starts  -->
+ <!-- menu section starts  -->
 
-<section class="menu">
+ <section class="menu">
 
   <h1 class="heading"><span>Watch options</span> </h1>
 
@@ -440,13 +441,13 @@
 
   </div>
 
-</section>
+ </section>
 
-<!-- menu section ends -->
+ <!-- menu section ends -->
 
-<!-- blogs section starts  -->
+ <!-- blogs section starts  -->
 
-<section id="bands" class="blogs">
+ <section id="bands" class="blogs">
 
   <h1 class="heading"><span>Apple watch accesories</span> </h1>
 
@@ -490,11 +491,11 @@
 
   </div>
 
-</section>
+ </section>
 
-<!-- blogs section ends -->
+ <!-- blogs section ends -->
 
-<div class="main-container">
+ <div class="main-container">
   <button id="btn-left" class="fas fa-angle-right"></button>
   <section class="main-slider" id="slider">
       <div class="thumbail">
@@ -653,10 +654,10 @@
       </div>
   </section>
   <button id="btn-right" class="btn-arrow  fas fa-angle-left"></button>
-</div>
-  </section>
- 
-</div>
+	</div>
+	</section>
+	
+	</div>
 
     <!-- End Section 4 (Apple watch) -->
 
@@ -689,7 +690,7 @@
     <!-- Section 6 (Contact Us) -->
     <div class="Footercontainer">  
       <div class="footer">        
-        <a href="https://www.apple.com/ru/iphone/"><img class="img" target="_blank"  src="images//footer/iphone.png"></a>   
+        <a href="#iphone"><img class="img" src="images//footer/iphone.png"></a>   
         <a href="#laptop"><img class="img"  src="/images/footer/macbook.png"></a>   
         <a href="#applewatch"><img class="img"  src="/images/footer/apple-watch.png"></a>   
         <a href="#airpods"><img class="img" src="/images/footer/airpods.png"></a>  
